[gd_scene load_steps=2 format=3 uid="uid://cjoin_screen_mp"]

[ext_resource type="Script" path="res://multiplayer/join_screen.gd" id="1_script"]

[node name="JoinScreen" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="JoinLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Press ENTER to Join"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerCountLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Connecting..."
horizontal_alignment = 1
vertical_alignment = 1
